Look for vcpkg in two places.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,13 @@
 cmake_minimum_required(VERSION 3.16)
 
-# By default, add the VCPKG toolchain file found in the parent directory of
-# this project.
+# By default, add the VCPKG toolchain file found.
 if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
-set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/../vcpkg/scripts/buildsystems/vcpkg.cmake)
+# Look in parent directory and then parent of parent
+if(EXISTS ${CMAKE_SOURCE_DIR}/../vcpkg/scripts/buildsystems/vcpkg.cmake)
+    set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/../vcpkg/scripts/buildsystems/vcpkg.cmake)
+elseif(EXISTS ${CMAKE_SOURCE_DIR}/../../vcpkg/scripts/buildsystems/vcpkg.cmake)
+    set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/../../vcpkg/scripts/buildsystems/vcpkg.cmake)
+endif()
 endif()
 
 project(tcl_http
