Add a few more places to look for tcl.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,11 @@ add_compile_definitions(WINVER=0x0A00 _WIN32_WINNT=0x0A00)
 endif()
 
 find_path(TCL_INCLUDE_DIR tcl.h REQUIRED
-    HINTS ${CMAKE_SOURCE_DIR}/../tcl/generic /usr/local/tcl86/include /usr/local/tcl87/include)
+    HINTS 
+    ${CMAKE_SOURCE_DIR}/../tcl/generic 
+    ${CMAKE_SOURCE_DIR}/../tcl86/generic 
+    ${CMAKE_SOURCE_DIR}/../tcl87/generic 
+    /usr/local/tcl86/include /usr/local/tcl87/include)
 find_library(TCL_LIBRARY REQUIRED NAMES tcl86 tcl86t libtcl8.6.so libtcl8.7.so
     HINTS ${TCL_INCLUDE_DIR}/../unix ${TCL_INCLUDE_DIR}/../win ${TCL_INCLUDE_DIR}/../macosx
     /usr/local/tcl86/lib /usr/local/tcl87/lib)
